[package]
name = "nekoui"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pas2rust/nekoui"
readme = "README.md"
include = [
    "src/**",
    "public/**",
    "Cargo.toml",
    "README.md",
    "LICENSE*"
]

categories = ["gui", "wasm", "web-programming"]
description = "A component-based UI framework for Leptos applications"
keywords = ["ui", "leptos", "component", "web", "framework"]
authors = ["pas2rust <pas2000@proton.me>"]
homepage = "https://github.com/pas2rust/"
documentation = "https://docs.rs/nekoui"

[dependencies]
kenzu = "0.0.2"
leptos = { version = "0.8.2", features = ["csr"] }
neto = { version = "0.0", features = ["wasm"]}
path2enum = "0.4"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "Document",
    "Element",
    "Window",
    "TextMetrics",
] }

[package.metadata]
assets = ["dist", "public"]
