[package]
name = "nekoui"
build = "build.rs"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pas2rust/nekoui"
readme = "README.md"
include = [
    "src/**",
    "public/**",
    "Cargo.toml",
    "README.md",
    "LICENSE*"
]

categories = ["gui", "wasm", "web-programming"]
description = "A component-based UI framework for Leptos applications"
keywords = ["ui", "leptos", "component", "web", "framework"]
authors = ["pas2rust <pas2000@proton.me>"]
homepage = "https://github.com/pas2rust/"
documentation = "https://docs.rs/nekoui"

[dependencies]
nyan = { path = "./nyan" }
leptos = { workspace = true }

[workspace]
members = [
    "nyan"
]

[workspace.dependencies]
leptos = { version = "0.8", features = ["csr"] }

[build-dependencies]
nyan = { path = "./nyan" }

[package.metadata]
assets = ["dist", "public"]